[package]
name = "liao-tools"
version = "0.0.6"
description = "Liao Tools"
authors = ["cavin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "liao_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 请求（异步）
reqwest = { version = "0.11", features = ["json", "stream"] }

# HTML 解析
scraper = "0.20"

# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }

# Excel 处理
calamine = "0.26"
rust_xlsxwriter = "0.79"
umya-spreadsheet = "2.3"  # 支持编辑现有 Excel 文件
image = { version = "0.25", features = ["webp", "jpeg", "png", "gif", "bmp"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
log = "0.4"
env_logger = "0.11"

# 异步
tokio = { version = "1", features = ["full"] }

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# Base64 编码
base64 = "0.22"

# UUID (用于生成临时文件名)
uuid = { version = "1.0", features = ["v4"] }

# 字符串相似度
strsim = "0.11"

# 异步工具
futures-util = "0.3"

fs_extra = "1.3"

# 系统目录
dirs = "5.0"

# ZIP 解析（用于读取 xlsx 中的合并单元格信息）
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# XML 解析
quick-xml = "0.31"

# 临时文件（用于测试）
tempfile = "3"

# Windows 注册表访问
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

